5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1850_1278.log
== TEST (2019-06-21 00:27:12) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
while(y!=-1):
	y=(y/111)-1
   z=(z/111)-1
	y=int(y)
   z=int(z)
	j=j+x[y,z]
	y=z
	z=int(input("Digite outra cidade: "))
print(j)	
	

-- ERROR:
File "XXXX", line 8
    z=(z/111)-1
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:27:20) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
j=0
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
while(y!=-1):
	y=(y/111)-1
   z=(z/111)-1
	y=int(y)
   z=int(z)
	j=j+x[y,z]
	y=z
	z=int(input("Digite outra cidade: "))
print(j)	
	

-- ERROR:
File "XXXX", line 8
    z=(z/111)-1
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:27:57) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
j=0
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
while(z!=-1):
	   y=(y/111)-1
      z=(z/111)-1
	   y=int(y)
      z=int(z)
	   j=j+x[y,z]
	   y=z
	   z=int(input("Digite outra cidade: "))
print(j)	
	

-- ERROR:
File "XXXX", line 8
    z=(z/111)-1
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:29:02) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
j=0
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
while(z!=-1):
	y=(y/111)-1
	z=(z/111)-1
	   
		
y=(y/111)-1
z=(z/111)-1
y=int(y)
z=int(z)
j=j+x[y,z]
y=z
z=int(input("Digite outra cidade: "))
print(j)	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:29:29) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
j=0
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
while(z!=-1):
	y=(y/111)-1
	z=(z/111)-1
	y=int(y)
	z=int(z)
	j=j+x[y,z]
	y=z
	
	   
		
y=(y/111)-1
z=(z/111)-1
y=int(y)
z=int(z)
j=j+x[y,z]
y=z
z=int(input("Digite outra cidade: "))
print(j)	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:29:41) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
j=0
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
while(z!=-1):
	y=(y/111)-1
	z=(z/111)-1
	y=int(y)
	z=int(z)
	j=j+x[y,z]
	y=z
   z=int(input("Digite outra cidade: "))
print(j)	
	

-- ERROR:
File "XXXX", line 13
    z=int(input())
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:29:54) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
j=0
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
while(z!=-1):
	y=(y/111)-1
	z=(z/111)-1
	y=int(y)
	z=int(z)
	j=j+x[y,z]
	y=z
	z=int(input(""))
   
print(j)	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:30:03) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
j=0
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
while(z!=-1):
	y=(y/111)-1
	z=(z/111)-1
	y=int(y)
	z=int(z)
	j=j+x[y,z]
	y=z
	z=int(input("Digite outra cidade: "))
   
print(j)	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:30:48) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
j=0
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
while(z!=-1):
	y=(y/111)-1
	z=(z/111)-1
	y=int(y)
	z=int(z)
	j=j+x[y,z]
	y=z
	z=int(input("Digite outra cidade: "))
   
print(j)	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:31:16) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
j=0
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
while(z!=-1):
	y=(y/111)-1
	z=(z/111)-1
	y=int(y)
	z=int(z)
	j=j+x[y,z]
	print(j)
	y=z
	z=int(input("Digite outra cidade: "))
   
print(j)	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:31:49) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
j=0
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
while(z!=-1):
	y=(y/111)-1
	z=(z/111)-1
	y=int(y)
	z=int(z)
	print(x[y,z])
	j=j+x[y,z]
	
	y=z
	z=int(input("Digite outra cidade: "))
   
print(j)	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:32:36) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
j=0
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
while(y!=-1):
	y=(y/111)-1
	z=(z/111)-1
	y=int(y)
	z=int(z)
	print(x[y,z])
	j=j+x[y,z]
	
	z=y
	y=int(input("Digite outra cidade: "))
   
print(j)	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:32:53) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
j=0
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
while(y!=-1):
	y=(y/111)-1
	z=(z/111)-1
	y=int(y)
	z=int(z)
	
	j=j+x[y,z]
	
	z=y
	y=int(input("Digite outra cidade: "))
   
print(j)	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-21 00:33:12) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
j=0
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
while(y!=-1):
	y=(y/111)-1
	z=(z/111)-1
	y=int(y)
	z=int(z)
	
	j=j+x[y,z]
	
	z=y
	y=int(input("Digite outra cidade: "))
   
print(j)	
	

-- EXECUTION TIME:
1.08348
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
19
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
52
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
29
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:33:22) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
j=0
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
while(y!=-1):
	y=(y/111)-1
	z=(z/111)-1
	y=int(y)
	z=int(z)
	print(x[y,z])
	j=j+x[y,z]
	
	z=y
	y=int(input("Digite outra cidade: "))
   
print(j)	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:34:32) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
j=0
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
while(y!=-1):
	y=(y/111)-1
	z=(z/111)-1
	y=int(y)
	z=int(z)
	print(x[y,z])
	j=j+x[y,z]
	
	z=y
	y=int(input("Digite outra cidade: "))
   
print(j)	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 02:35:29) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
j=0
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
while(z!=-1):
	y=(y/111)-1
	z=(z/111)-1
	y=int(y)
	z=int(z)
	print(x[y,z])
	j=j+x[y,z]
	
	y=z
	z=int(input("Digite outra cidade: "))
   
print(j)	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 02:36:22) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
j=0
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
while(z!=-1):
	y=(y/111)-1
	z=(z/111)-1
	y=int(y)
	z=int(z)
	print(y)
	print(z)
	print(x[y,z])
	j=j+x[y,z]
	
	y=z
	z=int(input("Digite outra cidade: "))
   
print(j)	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 02:37:49) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
j=0
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
while(z!=-1):
	y=(y/111)-1
	z=(z/111)-1
	y=int(y)
	z=int(z)
	print(y)
	print(z)
	print(x[y,z])
	j=j+x[y,z]
	
	y=(z+1)*111
	z=int(input("Digite outra cidade: "))
   
print(j)	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 02:38:03) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
j=0
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
while(z!=-1):
	y=(y/111)-1
	z=(z/111)-1
	y=int(y)
	z=int(z)
	print(y)
	print(z)
	print(x[y,z])
	j=j+x[y,z]
	
	y=(z+1)*111
	z=int(input("Digite outra cidade: "))
   
print(j)	
	

-- EXECUTION TIME:
1.172
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
2
4
8
4
5
5
5
0
11
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
1
6
15
6
4
13
4
2
8
2
5
3
5
0
11
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
0
1
2
1
0
2
0
2
11
2
0
11
0
4
15
4
0
15
0
6
1
57
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 02:38:05) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
j=0
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
while(z!=-1):
	y=(y/111)-1
	z=(z/111)-1
	y=int(y)
	z=int(z)
	print(y)
	print(z)
	print(x[y,z])
	j=j+x[y,z]
	
	y=(z+1)*111
	z=int(input("Digite outra cidade: "))
   
print(j)	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 02:38:25) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
j=0
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
while(z!=-1):
	y=(y/111)-1
	z=(z/111)-1
	y=int(y)
	z=int(z)
	
	j=j+x[y,z]
	
	y=(z+1)*111
	z=int(input("Digite outra cidade: "))
   
print(j)	
	

-- EXECUTION TIME:
0.988177
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
